@@ -1,5 +1,9 @@
 2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mknetdir.in: Remove erroneous reference to install_device.
+
+2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/normal/charset.c (grub_utf8_to_ucs4_alloc): Fix return type
 	to grub_ssize_t.
 	* grub-core/normal/main.c (grub_normal_init_page): Fix msg_len type.
